# youtube-video-summarization

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  dockercompose.yml  gemini_app.py  google_genai.py  gorq_notebook.ipynb  hello.py  pyproject.toml  requirements.txt  run_api.py  run_streamlit.py  stt.py  stt_1744267113.7207043.json  stt_1744267217.3216631.json  yt_download.py
app/: __init__.py  config.py  main.py
app/api/: __init__.py  app.py  routes.py  schems.py
app/core/: __init__.py  chat_handler.py  prompts.py  summarizer.py  transcriber.py  youtube_downloader.py
app/db/: __init__.py  crud.py  database.py  models.py
app/embeddings/: get_embedding_model.py
app/frontend/: __init__.py  api_client.py  components.py  streamlit_app.py
app/models/: __init__.py  schemas.py
app/utils/: __init__.py  caching.py  error_handling.py  helpers.py  logger.py  vector_store.py  vector_store_manager.py
data/: youtube_summarizer.db
data/summaries/: BJatgOiiht4_summary.json  BTjxUS_PylA_summary.json  FLmBqI3IKMA_summary.json  FM_pRefVCB4_summary.json  Hy8fB32GZoc_summary.json  ICWMWE0Zq54_summary.json  PCtQ6sipdqA_summary.json  RGT9D_hFtnI_summary.json  WCPTKRaScgE_summary.json  eEeUVeMGJuE_summary.json  elAzkXyRQFU_summary.json  fcfQkxwz4Oo_summary.json  i7twT3x5yv8_summary.json  lL_j7ilk7rc_summary.json  lTAcCNbJ7KE_summary.json  sZJvklCGn9s_summary.json  (+5 more)
research/: gorq_notebook.ipynb  yt_download.py
tests/: README.md  conftest.py  pytest.ini  requirements_dev.txt  test_integration.py  test_summarizer.py  test_transcriber.py  test_youtube_downloader.py
(+86 files in other folders)
